spade-tests/src/snapshots/spade_tests__ast_lowering__wildcard_is_not_allowed_in_enum_definition.snap
---
source: spade-tests/src/ast_lowering.rs
---
enum X {
    A{val: _}
}


error: Argument types cannot have wildcards in their type
  ┌─ testinput:2:12
  │
2 │     A{val: _}
  │            ^ Wildcard in argument type
